[gd_scene load_steps=10 format=2]

[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://BorderNode.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/man_vlieg.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Flying.gd" type="Script" id=5]
[ext_resource path="res://Sprites/background.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 360 )

[sub_resource type="DynamicFont" id=2]
size = 48
extra_spacing_top = 13
font_data = ExtResource( 1 )

[node name="Flying" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = -0.492
anchor_top = -0.493
anchor_right = -0.492
anchor_bottom = -0.493
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 6 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BorderNode" parent="." instance=ExtResource( 3 )]
position = Vector2( -512, -300 )
z_index = 1

[node name="BorderNode2" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, -300 )
z_index = 1

[node name="PlayerNode" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 2 )

[node name="CollisionBody" type="CollisionPolygon2D" parent="PlayerNode/Player"]
polygon = PoolVector2Array( -8, -80, 24, -80, 24, -72, 40, -72, 40, -56, 72, -56, 72, -40, 32, 0, 32, 8, 24, 24, 16, 40, 16, 56, 8, 56, 8, 72, 0, 80, -16, 80, -16, 64, -24, 64, -40, 56, -40, 64, -64, 88, -80, 88, -80, 72, -64, 56, -64, 40, -72, 40, -72, 24, -48, 0, -32, -8, -32, -56, -24, -56, -24, -72, -8, -72 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 4 )

[node name="Detection" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionBody2" type="CollisionPolygon2D" parent="PlayerNode/Player/Detection"]
position = Vector2( 0, 1.06067 )
polygon = PoolVector2Array( -8.79581, -81.9857, 24.8801, -81.9857, 24.9243, -74.0838, 40.6929, -74.0309, 40.9402, -58.0061, 72.9987, -57.9178, 72.9545, -40.4699, 32.5, 0.5, 32.5, 8.5, 24.5, 24.5, 17.0489, 39.9188, 17.0931, 55.9437, 8.87296, 56.1204, 8.91711, 71.5532, 0, 80, -16, 80, -16, 64, -24, 64, -40, 56, -40, 64, -64, 88, -80.8854, 88.0375, -80.8412, 70.7134, -64.6661, 54.5916, -65.55, 40.3793, -73.1072, 40.2468, -72.8509, 22.6046, -48.4645, -2.21503, -33.9069, -9.98459, -33.2882, -58.0414, -25.2891, -58.227, -25.1565, -74.0042, -9.06979, -74.2252 )

[node name="Resetter_wall" type="Area2D" parent="."]
position = Vector2( -616, 0 )
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetter_wall"]
shape = SubResource( 1 )

[node name="Resetter_border" type="Area2D" parent="."]
position = Vector2( -1536, 0 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Resetter_border"]
shape = SubResource( 1 )

[node name="GUI" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="Score" type="Label" parent="GUI"]
margin_left = -27.0
margin_top = -284.0
margin_right = 27.0
margin_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 54, 112 )
rect_pivot_offset = Vector2( 27, 56 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.160784, 0.203922, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Countdown" type="Label" parent="GUI"]
margin_left = -27.0
margin_top = -284.0
margin_right = 27.0
margin_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 54, 112 )
rect_pivot_offset = Vector2( 27, 56 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.160784, 0.203922, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Help" type="Label" parent="GUI"]
margin_left = -24.0
margin_top = -208.0
margin_right = 30.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 54, 112 )
rect_pivot_offset = Vector2( 27, 56 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.956863, 0.160784, 0.203922, 1 )
text = "verzamel x pillen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Start" type="Timer" parent="."]
pause_mode = 2
wait_time = 3.5
one_shot = true
autostart = true
script = ExtResource( 7 )

[node name="End" type="Timer" parent="."]
pause_mode = 2
one_shot = true
[connection signal="area_entered" from="PlayerNode/Player/Detection" to="PlayerNode/Player" method="_on_Detection_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detection" to="PlayerNode/Player" method="_on_Detection_body_entered"]
[connection signal="area_entered" from="Resetter_wall" to="." method="_on_Resetter_wall_area_entered"]
[connection signal="area_entered" from="Resetter_border" to="." method="_on_Resetter_border_area_entered"]
[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
[connection signal="timeout" from="End" to="." method="_on_End_timeout"]
